# orderinn

./: .gitignore  compose.yaml
item/: .env  Dockerfile  pyproject.toml  requirements.tsx
item/app/: config.py  main.py
item/app/database/: database.py
item/app/models/: models.py
item/app/routes/: item_routes.py
item/app/schema/: item_schemas.py
item/app/service/: item_service.py
item/app/utils/: utils.py
item/migrations/: env.py
item/migrations/versions/: 11b54290599e_first_migration.py
order/: .env  pyproject.toml  requirements.txt
order/app/: config.py  main.py
order/app/database/: database.py
order/app/models/: models.py
order/app/routes/: order_routes.py
order/app/schema/: schemas.py
order/app/service/: order_services.py
order/migrations/: env.py
order/migrations/versions/: 3fa6c1cc135d_init_migration.py  a3cb6617e319_change_id_type.py  b328ab851350_add_payment_provider_column.py
user/: .dockerignore  .env  Dockerfile  compose.yaml  pyproject.toml  seed_db.py
user/app/: config.py  main.py
user/app/auth/: auth.py
user/app/database/: database.py
user/app/models/: item_model.py  order_model.py  user_model.py  users.py
user/app/routes/: auth_router.py  inventory_routes.py  item_routes.py  order_routes.py  user_routes.py
user/app/schemas/: item_schema.py  order_schema.py  user_schema.py
user/app/service/: cognito.py  item_service.py  order_service.py  payment_service.py  user_service.py
user/app/utils/: auth.py  utils.py
user/migrations/: env.py
user/migrations/versions/: 115336ae7ed9_add_remote_side.py  22b22cefcb5c_add_full_name_attr.py  231fa429e21a_first_mifration.py  3079c74ae08a_fixed_model_relation.py  37697f98d973_add_full_name_attr.py  ab2d161ee75b_add_delete_orphan_to_user.py  b2ae6a476cd1_remove_delete_orphan_to_user.py  b67a0be3e729_fixed_model_relation.py  (+5 more)
(+3 files in other folders)
